search field now swaps visibility with mag glass. Fixed none search

--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ background-color: #00c;
     text-decoration: none;
 }
 
+.search-button{
+	margin-top:8px;
+}
+
 /*--------------------------------------------------------------
 Downloads/issues
 --------------------------------------------------------------*/
@@ -385,6 +389,10 @@ img {
 	transform:scale(1.02);
 }
 
+
+.hidden{
+	display: none;
+}
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
